--- a/portfolio-pages/poc.html
+++ b/portfolio-pages/poc.html
@@ -73,21 +73,29 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-4">
+          <div class="col-lg-6">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/project-poc.png" alt="">
+                  <img src="../assets/img/project-poc-filters.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="../assets/img/logo-pattern-recognition.jpeg" alt="">
+                  <img src="../assets/img/project-poc-exp.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
+                  <img src="../assets/img/project-poc-loss.png" alt="">
+                </div>
+
+                 <div class="swiper-slide">
                   <img src="../assets/img/logo-ray-tune.png" alt="">
                 </div>
+
+                <!-- <div class="swiper-slide">
+                  <img src="../assets/img/logo-pattern-recognition.jpeg" alt="">
+                </div> -->
 
               </div>
               <div class="swiper-pagination"></div>
@@ -106,7 +114,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 offset-md-1">
+          <div class="col-lg-5 offset-md-1">
             <div class="portfolio-description">
               <h2>Project details</h2>
               <p>During my 6-month research project, I conducted an in-depth analysis of various deep learning techniques to detect, highlight, and measure cracks in buildings. This involved exploring different network architectures, enhancing filters, and investigating the correlation between loss functions, network design, and input images. The objective was to develop an effective and accurate crack detection method.</p>
